JDK17
 - removed MaxPermSize param from scriptedLaunchOpts
   MaxPermSize is deprecated at Java8 and removed at Java17
 - changed java-unidoc test
   The generated file name differs depending on the javadoc version
 - changed the JDK distribution used for GitHub actions to Temurin